@@ -3,11 +3,14 @@
 \___ \| '_ ` _ \ / _ \| |/ / _ \ |_) | | '_ \ / _` |
  ___) | | | | | | (_) |   <  __/  __/| | | | | (_| |
 |____/|_| |_| |_|\___/|_|\_\___|_|   |_|_| |_|\__, |
-                                              |___/ 
-Author:  Tobias Oetiker <tobi@oetiker.ch>
 
-   SmokePing is a latency logging and graphing
-   system. It consists of a daemon process which
+                                              |___/ 
+Authors:  Tobias Oetiker <tobi of oetiker.ch>
+          Niko Tyni <ntyni with iki.fi>
+
+
+   SmokePing is a latency logging and graphing and
+   alerting system. It consists of a daemon process which
    organizes the latency measurements and a CGI which
    presents the graphs.
 
@@ -15,37 +18,19 @@ Author:  Tobias Oetiker <tobi@oetiker.ch>
 SmokePing is ...
 ================
 
- * quite fast because it uses FPing todo the actual pinging
+ * extensible through plug-in modules
+
+ * fully documented
 
  * easy to customize through a webtemplate and an extensive
    configuration file.
 
  * written in perl and should readily port to any unix system
 
- * extensible through plug-in modules
-
  * an RRDtool frontend
 
  * able to deal with DYNAMIC IP addresses as used with
    Cable and ADSL internet.
-
-Roadmap
-=======
-
-SmokePing comes with documentation to make it easy to use and
-install. The following important documentation files are
-included with SmokePing:
-
-
- * doc/smokeping_install.txt  -- How to Setup and Install 
- * doc/smokeping_upgrade.txt  -- Notes on upgrading
- * doc/smokeping_config.txt   -- Description of the Config File
- * doc/smokeping_examples.txt -- Examples of the Config File
- * doc/smokeping.txt          -- About the SmokePing Daemon   
- * doc/smokeping.cgi.txt      -- About the CGI Module
-
-In the doc directory you can find even more information
-and the above documents in MAN, POD, TXT and HTML format.
 
 Do you like it
 ==============
@@ -55,9 +40,7 @@ the work I am doing (SmokePing like MRTG and RRDtool have
 been written entirely in my spare time) please feel free to
 use:
 
-  http://people.ee.ethz.ch/~oetiker/wish
-
+  http://people.ee.ethz.ch/oetiker/wish
 
 Cheers
 tobi
-
