@@ -8,42 +8,35 @@
 <STYLE type="text/css">
 <!--
 
-.menu { color: black;
-        font-size: 10px;
-        font-family: Arial, Helvetica, Sans-Serif;
-       }
+td.menubar, 
+td.menubar a
+{
+    color: white;
+    text-decoration: none;
+}
 
-.menuitem
-       { color: black;
-         font-size: 10px;
-         font-family: Arial, Helvetica, Sans-Serif;
+td.menubar {
+    background: #4c4c4c;
+}
+
+td.menu,
+td.menuitem,
+td.menuopen,
+td.menuactive
+ {      font-size: 10px;
+        font-family: sans-serif;
        }
        
-.menuopen
-       { color: black;
-         font-size: 10px;
-         font-family: Arial, Helvetica, Sans-Serif;
+td.menuactive {
+        background: #202040;
        }
 
-.menuactive
-       { color: black;
-         font-size: 10px;
-         font-family: Arial, Helvetica, Sans-Serif;
-       }
-       
-.menuactive {
-        color: black;
-        background: #aaaaff;
-       }
-
-.menulink {
-	color: black;
+a.menulink {
+	color: white;
 	}
 	
-.menu  A:Hover       {
-        text-decoration: none;
-        color: #000000;
-        background: silver;
+a.menulink:hover       {
+        color: #e0e0ff;
         }
 
 
@@ -54,31 +47,29 @@
 <BODY bgcolor="white">
 <TABLE border="0" cellpadding="10" cellspacing="0">
 <TR>
-  <TD align="left" width="130" bgcolor="#cfcfcf" valign="top">
+  <TD class="menubar" align="left" width="130" valign="top">
   <P></P>
-  <P><B>Select&nbsp;Target:</B>&nbsp;&nbsp;</P>
+  <P><B>SmokePing Targets:</B>&nbsp;&nbsp;</P>
   <P><##menu##></P>
-  <br>
-  <br>
-  <br>
-  <hr>
-  <br>
-  <p><small>Maintained by:<br/><A href="mailto:<##contact##>"><##owner##></A></small></p>
-  <p><small>Created using <##author##>'s <##smokeping##></small></p>
-  <P><##smokelogo##></P>
-  <P></P>
-  <P><##rrdlogo##></P>
-</TD>
-   <TD></TD>
-   <TD valign="top">
+  <br/>
+  </td>
+   <TD rowspan="2"></TD>
+   <TD rowspan="2" valign="top">
       <H1><##title##></H1>
         <P><##remark##></P>
         <P><##overview##></P>
         <P><##body##></P>
    </TD>
 </TR>
-<tr><td width="130" bgcolor="#cfcfcf">
-</td><td></td><td></td></tr>
+<tr>
+<td class="menubar" valign="bottom">
+  <p><small>Maintained by:<br/><A href="mailto:<##contact##>"><##owner##></A></small></p>
+  <p><small>Created using <##smokeping##> by <##author##></small></p>
+  <P><##smokelogo##></P>
+  <P></P>
+  <P><##rrdlogo##></P>
+</TD>
+</tr>
 </TABLE>
 </BODY>
 </HTML>
