@@ -1,3 +1,6 @@
+2005/09/04 - 2.0.0 release (tobi)
+* updated page template to match new logos and included Niko
+  -- tobi
 * don't create directories in "datadir" when running as a CGI
   -- niko
 * the DYNAMIC-related files (.adr and .snmp) can now be located outside "datadir"
